Update spacing values. Fix horse-button api. Implement horse-button in fixture component

--- a/src/client/features/dashboard/components/Fixture/Fixture.styles.scss
+++ b/src/client/features/dashboard/components/Fixture/Fixture.styles.scss
@@ -10,7 +10,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 56px;
+  width: 44px;
 
   color: rgba(0, 0, 0, 0.67);
   font-size: 0.8rem;
