--- a/src/client/global.scss
+++ b/src/client/global.scss
@@ -22,15 +22,21 @@
   --horse-primary-darker: #306f33;
   --horse-primary-text: #fff;
 
-  --horse-secondary: #fde87e;
+  --horse-secondary: red;
+  --horse-secondary-text: #fff;
 
-  --horse-tertiary: tan;
+  --horse-tertiary-light: #fde67b61;
+  --horse-tertiary: #fde67b;
+  --horse-tertiary-text: rgba(0, 0, 0, 0.87);
 
   --horse-grey: #ddd;
   --horse-grey-dark: #ccc;
   --horse-grey-darker: #bbb;
 
   --horse-background: #343637;
+
+  --horse-text: rgba(0, 0, 0, 0.87);
+  --horse-muted-text: rgba(0, 0, 0, 0.67);
 
   // Text colors
   $textDarkPrimary: rgba(0, 0, 0, 0.87);
