--- a/src/client/shared/components/Section/styles.scss
+++ b/src/client/shared/components/Section/styles.scss
@@ -9,5 +9,5 @@ $spacing: $base * 2 * 1px;
 }
 
 .spaced {
-  padding: $spacing;
+  padding: 20px 12px;
 }
